--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "anychart-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
