--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
+    "browser-router": "^0.2.0",
+    "crypto": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^2.3.0",
     "mdbreact": "^5.2.0",
-    "react-icons": "^4.3.1",
-    "bootstrap": "^5.1.3",
-    "axios": "^0.26.0",
-    "browser-router": "^0.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
-    "react-dom": "^17.0.2",  
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
